FrontendClientMetadata is a plain record
This is an immutable DTO: annotate it and make it a record.

Change-Id: I19ad27fad4821a86c6742b48cc1b41638ad60503
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>